# MADS-ML-WMvanHuis

./: .gitignore  .lefthook.yml  README.md  _config.yml  pyproject.toml
1-hypertuning-gridsearch/: instructions.md  model.toml  notebook.ipynb  settings.toml  summary.md
2-hypertuning-mlflow/: 03_mlflow.py  instructions.md  notebook.ipynb  plot_mlflow_results.py  summary.md
2-hypertuning-mlflow/mlruns/225965079130048734/: meta.yaml
3-hypertuning-rnn/: instructions.md  mlflow.db  notebook.ipynb  summary.md
4-hypertuning-ray/: instructions.md  summary.md
4-hypertuning-ray/myproject/: hypertuning-assignment.ipynb  pyproject.toml
4-hypertuning-ray/myproject/ray_results/experiment_1_lr_filters/: basic-variant-state-2025-10-13_11-49-40.json  basic-variant-state-2025-10-13_12-11-51.json  experiment_state-2025-10-13_11-49-40.json  experiment_state-2025-10-13_12-11-51.json  tuner.pkl
4-hypertuning-ray/myproject/ray_results/experiment_2_dropout_bn/: basic-variant-state-2025-10-13_13-11-15.json  experiment_state-2025-10-13_13-11-15.json  tuner.pkl
5-deployment/: summary.md
6-hackathon/: project_cuddlefish.md  summary.md
7-ethics/: summary.md
mlruns/0/: meta.yaml
mlruns/664786273533462829/: meta.yaml
mlruns/664786273533462829/6230b7856d904e2099e70fe4ebfb5291/: meta.yaml
mlruns/664786273533462829/6230b7856d904e2099e70fe4ebfb5291/params/: lr  (+3 more)
mlruns/664786273533462829/6abaac9e9ac14306a4346cb38f22845b/: meta.yaml
mlruns/664786273533462829/7a2c28e2f65d46b5968cc7ec2b7ddcf9/: meta.yaml
mlruns/664786273533462829/e3230e83ac674e5c870e04fe8c54023f/: meta.yaml
(+47 files in other folders)
